--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1rZiXl562q7aVyk1kJ2nO85YBAq8ixTiw/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1sKKpslMhtggEF0PqHT56F_N2sWxj1qOu/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -407,7 +407,7 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
   </div>
 
 <div class="viewall">
-  <a href="/projects" class="btn"><span>View All</span>
+  <a href="./projects" class="btn"><span>View All</span>
     <i class="fas fa-arrow-right"></i>
 </a>
 </div>
@@ -522,7 +522,7 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
 </div>
 
   <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
+    <a href="./experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
   </div>
