--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/shivani-patel-p5371/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
           <li><a class="github" aria-label="GitHub" href="https://github.com/she0407" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="peerlist" aria-label="peerlist" href="https://peerlist.io/she47" target="_blank"><i class="fab fa-peerlist"></i></a></li>
-          <li><a class="devto" aria-label="Dev.to" href="https://dev.to/shivani47" target="_blank"><i class="fab fa-devto"></i></a></li>
+          <li><a class="peerlist" aria-label="Peerlist" href="https://peerlist.io/she0407" target="_blank"><img src="./assets/images/Peerlist.png" alt="Peerlist" style="width: 24px; height: 24px;"></a></li>
+          <li><a class="dev.to" aria-label="Dev.to" href="https://dev.to/she0407" target="_blank"><i class="fab fa-dev"></i></a></li>
         </ul>
       </div>
     </div>
@@ -92,7 +92,7 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> shivanipatelsp4799@gmail.com</p>
+              <p><span> email : </span> pshe47@gmail.com</p>
               <p><span> place : </span> ontario, canada </p>
             </div>
         </div>
