--- a/experience/index.html
+++ b/experience/index.html
@@ -182,7 +182,12 @@
 <!-- footer section ends -->
 
 <!-- scroll top btn -->
-<a href="#experience" class="fas fa-angle-up" id="scroll-top"></a>
+<!--<a href="#experience" class="fas fa-angle-up" id="scroll-top"></a> -->
+    <a href="../index.html#experience" class="btn">
+    <i class="fas fa-arrow-left"></i>
+    <span>Back to Home</span>
+</a>
+
 <!-- scroll back to top -->
 
 
