--- a/experience/index.html
+++ b/experience/index.html
@@ -160,17 +160,13 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 000-000-0000</p>
           <p> <i class="fas fa-envelope"></i>pshe47@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Ontario,Canada</p>
           <div class="share">
 
-            <a href="https://www.linkedin.com/in/shivani-patel" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/shivani-patel-p5371/" class="fab fa-linkedin" target="_blank"></a>
             <a href="https://github.com/shivani-patel" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:shivanipatel21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/shivani_patel" class="fab fa-twitter" target="_blank"></a>
-            <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
-            <a href="https://peerlist.io/she47" class="fab fa-user-friends" target="_blank"></a>
+            <a href="mailto:pshe47@gmail.com" class="fas fa-envelope" target="_blank"></a>
             <a href="https://dev.to/she0407" class="fab fa-dev" target="_blank"></a>
           </div>
       </div>
@@ -182,14 +178,11 @@
 <!-- footer section ends -->
 
 <!-- scroll top btn -->
-<!--<a href="#experience" class="fas fa-angle-up" id="scroll-top"></a> -->
-    <a href="../index.html#experience" class="btn">
-    <i class="fas fa-arrow-left"></i>
-    <span>Back to Home</span>
-</a>
+<a href="#experience" class="fas fa-angle-up" id="scroll-top"></a> 
+    
 
 <!-- scroll back to top -->
-
+<a href="../index.html#home" class="btn">
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS STARTS ==== -->
 <!-- jquery cdn -->
