--- a/experience/index.html
+++ b/experience/index.html
@@ -127,12 +127,20 @@
 
   </div>
 
-  <div class="morebtn">
+  <!-- <div class="morebtn">
     <a href="/#experience" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
-  </div>
+  </div> -->
+
+    <div class="morebtn">
+  <a href="/" class="btn">
+      <i class="fas fa-arrow-left"></i>
+      <span>Back to Home</span>
+  </a>
+</div>
+
 
 </div>
 </section>
@@ -165,7 +173,7 @@
           <div class="share">
 
             <a href="https://www.linkedin.com/in/shivani-patel-p5371/" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/shivani-patel" class="fab fa-github" target="_blank"></a>
+            <a href="https://github.com/she0407" class="fab fa-github" target="_blank"></a>
             <a href="mailto:pshe47@gmail.com" class="fas fa-envelope" target="_blank"></a>
             <a href="https://dev.to/she0407" class="fab fa-dev" target="_blank"></a>
           </div>
