--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
-    <title>Projects | Portfolio Jigar Sable</title>
+    <title>Projects | Portfolio Shivani Patel</title>
 </head>
 <body oncontextmenu="return false">
 
@@ -38,10 +38,10 @@
   
   <div id="filters" class="button-group">
     <button class="btn is-checked" data-filter="*">All Projects</button>
-    <button class="btn" data-filter=".mern">MERN Stack</button>
-    <button class="btn" data-filter=".lamp">LAMP Stack</button>
-    <button class="btn" data-filter=".basicweb">Basic Web</button>
-    <button class="btn" data-filter=".android">Android App</button>
+    <button class="btn" data-filter=".mern">AWS Cloud</button>
+    <button class="btn" data-filter=".lamp">AWS Devops</button>
+    <button class="btn" data-filter=".basicweb">Amazon Clone</button>
+    <button class="btn" data-filter=".android">Fabric Of Ohio</button>
   </div>
 
   <div class="box-container">
@@ -65,11 +65,13 @@
   </div>
 
   <div class="backbtn">
-    <a href="/#work" class="btn">
+     <a href="/Portfolio/#home" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
   </div>
+
+
 
 </section>
 <!-- work project section ends -->
