--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Shivani Patel </a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -65,7 +65,7 @@
   </div>
 
   <div class="backbtn">
-     <a href="/Portfolio/#home" class="btn">
+   <a href="/Portfolio/index.html#work">Work</a>
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
