--- a/404.html
+++ b/404.html
@@ -81,11 +81,9 @@
           <p> <i class="fas fa-map-marked-alt"></i>Ontario,canada</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/shivani-patel" class="fab fa-linkedin" target="_blank"></a>
-              <a href="https://github.com/shivani-patel" class="fab fa-github" target="_blank"></a>
-              <a href="mailto:shivanipatelsp4799@gmail.com" class="fas fa-envelope" target="_blank"></a>
-              <a href="https://twitter.com/shivani_patel" class="fab fa-twitter" target="_blank"></a>
-              <a href="https://peerlist.io/she47" class="fab fa-peerlist" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/shivani-patel-p5371/" class="fab fa-linkedin" target="_blank"></a>
+              <a href="https://github.com/she0407" class="fab fa-github" target="_blank"></a>
+              <a href="mailto:pshe47@gmail.com" class="fas fa-envelope" target="_blank"></a>
           </div>
       </div>
   </div>
