--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="socials">
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/shivani-patel-p5371/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/she0407" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="github" aria-label="https://github.com/Shivani4Patel" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="dev.to" aria-label="Dev.to" href="https://dev.to/she0407" target="_blank"><i class="fab fa-dev"></i></a></li>
         </ul>
       </div>
@@ -301,8 +301,8 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
         <div class="desc">
           <p>Provisioned AWS resources using infrastructure as code (IaC) and designed a scalable, secure three-tier architecture.</p>
           <div class="btns">
-            <a href="https://github.com/she0407" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/she0407" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -317,8 +317,8 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
         <div class="desc">
           <p>Led the deployment of a multi-cloud disaster recovery solution using VMware HCX, Veeam, and IBM Cloud, integrating GitHub for version control and CI practices.</p>
           <div class="btns">
-            <a href="https://github.com/she0407" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/she0407" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -333,8 +333,8 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
         <div class="desc">
           <p>Utilized D3.js, Material UI, Flask, and PostgreSQL to create a visualization project.</p>
           <div class="btns">
-            <a href="https://github.com/she0407" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/she0407" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -349,8 +349,8 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
         <div class="desc">
           <p>Configured Jenkins to automatically trigger deployments based on code changes, increasing deployment frequency by 50%. Managed Kubernetes manifests with Argo CD.</p>
           <div class="btns">
-            <a href="https://github.com/she0407" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/she0407" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -367,8 +367,8 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
         <div class="desc">
           <p>Improved database performance by 30% through connection pooling in MySQL, implemented Redux for state management, and increased system scalability by leveraging Kafka.</p>
           <div class="btns">
-            <a href="https://github.com/she0407" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/she0407" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/Shivani4Patel" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -604,7 +604,7 @@ Beyond tech, I enjoy creative activities like art, 2D/3D architecture with Revit
           <div class="share">
 
               <a href="https://www.linkedin.com/in/shivani-patel-p5371/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/she0407" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="https://github.com/Shivani4Patel" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:pshe47@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
       
           </div>
