--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
           <div class="share">
 
               <a href="https://www.linkedin.com/in/shivani-patel-p5371/" class="fab fa-linkedin" target="_blank"></a>
-              <a href="https://github.com/she0407" class="fab fa-github" target="_blank"></a>
+              <a href=https://github.com/Shivani4Patel class="fab fa-github" target="_blank"></a>
               <a href="mailto:pshe47@gmail.com" class="fas fa-envelope" target="_blank"></a>
           </div>
       </div>
