--- a/experience/index.html
+++ b/experience/index.html
@@ -60,21 +60,6 @@
         </div>
       </div>
   
-      <div class="container right">
-          <div class="content">
-            <div class="tag">
-              <h2>IT Technical Executive</h2>
-            </div>
-            <div class="desc">
-                <h3>Virchow Biotech PVT.LTD.</h3>
-                <p>Aug 2021 - Aug 2022</p>
-                <ul>
-                    <li>Supported the deployment of cloud-based solutions, migrating 75% of servers to enhance collaboration and data accessibility.</li>
-                    <li>Provided technical support for IT infrastructure, ensuring compliance with HIPAA and FDA guidelines.</li>
-                </ul>
-            </div>
-          </div>
-        </div>
   
         <div class="container left">
           <div class="content">
@@ -82,7 +67,7 @@
               <h2>Cloud Engineer Intern</h2>
             </div>
             <div class="desc">
-                <h3>Tata Consultancy Services</h3>
+                <h3>Shiv Infrastructure </h3>
                 <p>4 months</p>
                 <ul>
                     <li>Assisted in implementing cloud solutions and infrastructure as code practices.</li>
@@ -98,8 +83,8 @@
             <h2>Financial Advisor</h2>
           </div>
           <div class="desc">
-              <h3>Shiv Infrastructure</h3>
-              <p>Mar 2019 - Feb 2021</p>
+              <h3>Gatestone</h3>
+              <p>Dec 2024 - Feb 2025</p>
               <ul>
                   <li>Advised clients on investment strategies and financial planning, improving client retention by 20%.</li>
                   <li>Utilized financial analysis tools to assess client portfolios and recommend improvements.</li>
@@ -111,7 +96,7 @@
       <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>Software Engineer Intern</h2>
+            <h2>Software Engineer </h2>
           </div>
           <div class="desc">
               <h3>Shiv Infrastructure</h3>
@@ -173,7 +158,7 @@
           <div class="share">
 
             <a href="https://www.linkedin.com/in/shivani-patel-p5371/" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/she0407" class="fab fa-github" target="_blank"></a>
+            <a href=https://github.com/Shivani4Patel class="fab fa-github" target="_blank"></a>
             <a href="mailto:pshe47@gmail.com" class="fas fa-envelope" target="_blank"></a>
             <a href="https://dev.to/she0407" class="fab fa-dev" target="_blank"></a>
           </div>
